--- a/styles/style.css
+++ b/styles/style.css
@@ -167,6 +167,8 @@ body {
     }
 
     .container__imagem_do_codigo {
+        width: 100%;
+        height: 100%;
         margin-top: 0%;
     }
 
